2005-10-08 Pierrick LE GALL

	* new: mass virtual categories movement manager in
	Administration>Categories>Move screen.

2005-10-05 Pierrick LE GALL

	* bug 160 fixed: (part one of the bug) hard coded column name of
	users table had to be replaced by the configurable column
	name. This correction was made by a full rewrite of filtered users
	list management. The other bug (not submited in bugtracker) that
	needed this rewrite was that when you choose "all" as target for
	mass users modification, you expected to apply modification on
	filtered users, not all users.

	* bug 160 fixed: (part two of the bug) hard coded column name for
	primary key in mass_updates function.

	* modification: configuration parameter users_page is now located
	in the correct file (include/config_default.inc.php instead of
	admin/user_list.php)

2005-09-27 Pierrick LE GALL
	
	* bug 168 fixed: crash when language file does not
	exists. Constant PHPWG_DEFAULT_LANGUAGE added. New function
	get_language_filepath always used to find language files.

2005-09-26 Pierrick LE GALL

	* bug 158 fixed: display error on "double selects" screens (with
	MSIE, strange behavior). VDigital modification optimizes width
	usage :-)

2005-09-25 Pierrick LE GALL

	* bug 163 fixed: link error when cookies disabled in admin/stats

2005-09-24 Pierrick LE GALL

	* bug fixed: HTML error on nested UL in categories menu.

	* bug 161 fixed: guest_id not taken into account for history table
	insert.

	* bug 164 fixed: category inserted in history table becomes too
	long if HTML tags are kept.

2005-09-24 Pierrick LE GALL

	* bug 162 fixed: division by zero when trying to view "all" items
	in admin/element_set_(global|unit)

	* bug 156 fixed: error when selection is empty was not catched.
	
2005-09-21 Pierrick LE GALL

	* bug 151 fixed: default maxheight was not proposed as "set to"
	option in admin/user_list

2005-09-21 Pierrick LE GALL

	* bug 150 fixed: in category permissions management, wrong column